// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell component check Cell Frame renders correctly 1`] = `
<DocumentFragment>
  <div
    class="css-1q0n4ib"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell Frame renders correctly 2`] = `
<DocumentFragment>
  <div
    class="css-1q0n4ib"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell Frame renders correctly 3`] = `
<DocumentFragment>
  <div
    class="css-1q0n4ib"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell Frame renders correctly 4`] = `
<DocumentFragment>
  <div
    class="css-1q0n4ib"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell Frame renders correctly 5`] = `
<DocumentFragment>
  <div
    class="css-1q0n4ib"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell Frame renders correctly 6`] = `
<DocumentFragment>
  <div
    class="css-1q0n4ib"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell Frame renders correctly 7`] = `
<DocumentFragment>
  <div
    class="css-1q0n4ib"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell Frame renders correctly 8`] = `
<DocumentFragment>
  <div
    class="css-1q0n4ib"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell Frame renders correctly 9`] = `
<DocumentFragment>
  <div
    class="css-1q0n4ib"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell Frame renders correctly 10`] = `
<DocumentFragment>
  <div
    class="css-1q0n4ib"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell Frame renders correctly 11`] = `
<DocumentFragment>
  <div
    class="css-1q0n4ib"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell Frame renders correctly 12`] = `
<DocumentFragment>
  <div
    class="css-1q0n4ib"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell Frame renders correctly 13`] = `
<DocumentFragment>
  <div
    class="css-1q0n4ib"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 1`] = `
<DocumentFragment>
  <div
    class="css-103121h"
    data-testid="1,1"
    role="cell"
  >
    0
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 2`] = `
<DocumentFragment>
  <div
    class="css-1dokkwi"
    data-testid="1,1"
    role="cell"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 3`] = `
<DocumentFragment>
  <div
    class="css-hxpcqh"
    data-testid="1,1"
    role="cell"
  >
    2
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 4`] = `
<DocumentFragment>
  <div
    class="css-x1wks9"
    data-testid="1,1"
    role="cell"
  >
    3
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 5`] = `
<DocumentFragment>
  <div
    class="css-10uw94w"
    data-testid="1,1"
    role="cell"
  >
    4
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 6`] = `
<DocumentFragment>
  <div
    class="css-1snmbr7"
    data-testid="1,1"
    role="cell"
  >
    5
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 7`] = `
<DocumentFragment>
  <div
    class="css-183elvv"
    data-testid="1,1"
    role="cell"
  >
    6
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 8`] = `
<DocumentFragment>
  <div
    class="css-1okt1ig"
    data-testid="1,1"
    role="cell"
  >
    7
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 9`] = `
<DocumentFragment>
  <div
    class="css-1bhuacv"
    data-testid="1,1"
    role="cell"
  >
    8
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 10`] = `
<DocumentFragment>
  <div
    class="css-16bwjvk"
    data-testid="1,1"
    role="cell"
  >
    <div
      class="css-1f7ob6g"
    />
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 11`] = `
<DocumentFragment>
  <div
    class="css-1yh9r0j"
    data-testid="1,1"
    role="cell"
  >
    10
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 12`] = `
<DocumentFragment>
  <div
    class="css-1yh9r0j"
    data-testid="1,1"
    role="cell"
  >
    <div
      class="css-1duh8q7"
    />
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 13`] = `
<DocumentFragment>
  <div
    class="css-1yh9r0j"
    data-testid="1,1"
    role="cell"
  >
    <div
      class="css-11asmo2"
    />
  </div>
</DocumentFragment>
`;
